# langchain-parser

./: .gitignore  README.md  pyproject.toml
data/: test.html
langchain-parser/: pipeline.py  utils.py
langchain-parser/models/: openai.py
langchain-parser/models/config/: default.yaml
langchain-parser/parsers/: __init__.py  parser.py  parser_factory.py
langchain-parser/parsers/template/: html_to_md.py
langchain-parser/prompts/: default.json  loader.py
langchain_parser/: inference.py  pipeline.py
langchain_parser/models/: openai.py
langchain_parser/parsers/: html_to_md_parser.py
langchain_parser/templates/model/: default.yaml
langchain_parser/templates/prompt/: default.json
test/: test_inference.py
