[project]
name = "langchain-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-openai>=0.2.11",
    "langchain>=0.3.9",
    "pydantic>=2.10.3",
]


# Huggingface setting
[tool.ruff]
line-length = 119

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823" ]
select = ["C", "E", "F", "I", "W"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.uv]
dev-dependencies = [
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
]
